feat: add token auth
